--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    <title>Weitian&apos;s Blog</title>
+    <title>Weitian&apos;s Space</title>
 
   </head>
   <body>
